Bug 197007 - ACPI errors reported on HP Spectre x360 (associated with internal monitor issues)
Summary: ACPI errors reported on HP Spectre x360 (associated with internal monitor iss...
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Zhang Rui
URL: https://bugs.freedesktop.org/show_bug...
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-20 02:48 UTC by Nick Coghlan
Modified: 2019-12-03 22:26 UTC (History)
2 users (show)

See Also:
Kernel Version: kernel-4.12.13-300.fc26.x86_64
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg output with drm.debug=0xe set in the boot options (76.70 KB, text/plain)
2017-09-20 02:49 UTC, Nick Coghlan
Details

Description Nick Coghlan 2017-09-20 02:48:54 UTC
(Brought over from https://bugs.freedesktop.org/show_bug.cgi?id=102765)

Running various versions of Fedora on the HP Spectre x360, I'm seeing symptoms where the laptop's internal monitor flickers, freezes, and whites out for a while, before eventually returning to the flickering behaviour, and then eventually stabilises again. (I've seen these intermittently the entire time I've owned the laptop, so this isn't a new problem - I just finally got around to investigating what information I needed to supply to make a useful bug report)

The only custom boot settings I currently have configured are the ones needed to work around a problem with the device otherwise not emitting any sound (from https://bugzilla.redhat.com/show_bug.cgi?id=1220709#c10):

    acpi_backlight=vendor acpi_osi='!Windows 2013' acpi_osi='!Windows 2012'

The attached dmesg log was generated with drm.debug=0xe in the boot options, just after the internal monitor had gone through an episode of freezing and whiting out (and while it was still flickering a bit).

The most suspicious looking lines are these ones:

==============
[   14.459261] ACPI Error: Field [D128] at 1152 exceeds Buffer [NULL] size 160 (bits) (20170303/dsopcode-236)
[   14.459268] ACPI Error: Method parse/execution failed [\HWMC] (Node ffff8edcc61507f8), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459279] ACPI Error: Method parse/execution failed [\_SB.WMID.WMAA] (Node ffff8edcc61523c0), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459338] ACPI Error: Field [D128] at 1152 exceeds Buffer [NULL] size 160 (bits) (20170303/dsopcode-236)
[   14.459342] ACPI Error: Method parse/execution failed [\HWMC] (Node ffff8edcc61507f8), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459349] ACPI Error: Method parse/execution failed [\_SB.WMID.WMAA] (Node ffff8edcc61523c0), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459404] ACPI Error: Field [D128] at 1152 exceeds Buffer [NULL] size 160 (bits) (20170303/dsopcode-236)
[   14.459408] ACPI Error: Method parse/execution failed [\HWMC] (Node ffff8edcc61507f8), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459415] ACPI Error: Method parse/execution failed [\_SB.WMID.WMAA] (Node ffff8edcc61523c0), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459474] input: HP WMI hotkeys as /devices/virtual/input/input27
[   14.459637] ACPI Error: Field [D128] at 1152 exceeds Buffer [NULL] size 160 (bits) (20170303/dsopcode-236)
[   14.459642] ACPI Error: Method parse/execution failed [\HWMC] (Node ffff8edcc61507f8), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459650] ACPI Error: Method parse/execution failed [\_SB.WMID.WMAA] (Node ffff8edcc61523c0), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459692] ACPI Error: Field [D128] at 1152 exceeds Buffer [NULL] size 160 (bits) (20170303/dsopcode-236)
[   14.459695] ACPI Error: Method parse/execution failed [\HWMC] (Node ffff8edcc61507f8), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
[   14.459702] ACPI Error: Method parse/execution failed [\_SB.WMID.WMAA] (Node ffff8edcc61523c0), AE_AML_BUFFER_LIMIT (20170303/psparse-543)
==============

Software details:

- Fedora 26
- KDE Plasma Desktop 5.10.1
- Display server: xorg-x11-server-Xorg-1.19.3-4.fc26.x86_64
- Driver: xorg-x11-drv-intel-2.99.917-28.20160929.fc26.x86_64
- Kernel: kernel-4.12.13-300.fc26.x86_64

Hardware details:

$ sudo lspci -nn
[sudo] password for ncoghlan: 
00:00.0 Host bridge [0600]: Intel Corporation Broadwell-U Host Bridge -OPI [8086:1604] (rev 09)
00:02.0 VGA compatible controller [0300]: Intel Corporation HD Graphics 5500 [8086:1616] (rev 09)
00:03.0 Audio device [0403]: Intel Corporation Broadwell-U Audio Controller [8086:160c] (rev 09)
00:14.0 USB controller [0c03]: Intel Corporation Wildcat Point-LP USB xHCI Controller [8086:9cb1] (rev 03)
00:16.0 Communication controller [0780]: Intel Corporation Wildcat Point-LP MEI Controller #1 [8086:9cba] (rev 03)
00:1b.0 Audio device [0403]: Intel Corporation Wildcat Point-LP High Definition Audio Controller [8086:9ca0] (rev 03)
00:1c.0 PCI bridge [0604]: Intel Corporation Wildcat Point-LP PCI Express Root Port #2 [8086:9c92] (rev e3)
00:1c.2 PCI bridge [0604]: Intel Corporation Wildcat Point-LP PCI Express Root Port #3 [8086:9c94] (rev e3)
00:1f.0 ISA bridge [0601]: Intel Corporation Wildcat Point-LP LPC Controller [8086:9cc3] (rev 03)
00:1f.2 SATA controller [0106]: Intel Corporation Wildcat Point-LP SATA Controller [AHCI Mode] [8086:9c83] (rev 03)
00:1f.3 SMBus [0c05]: Intel Corporation Wildcat Point-LP SMBus Controller [8086:9ca2] (rev 03)
01:00.0 Unassigned class [ff00]: Realtek Semiconductor Co., Ltd. RTS5227 PCI Express Card Reader [10ec:5227] (rev 01)
02:00.0 Network controller [0280]: Intel Corporation Wireless 7265 [8086:095a] (rev 50)
Comment 1 Nick Coghlan 2017-09-20 02:49:54 UTC
Created attachment 258511 [details]
dmesg output with drm.debug=0xe set in the boot options
Comment 2 Zhang Rui 2017-09-25 22:27:23 UTC
please raise the problem to freedesktop.org instead.
Comment 3 Zhang Rui 2017-09-25 22:30:08 UTC
Forgot to say, the ACPI errors are probably not related with the monitor flickers, freezes issue.
Comment 4 Nick Coghlan 2017-09-26 00:55:18 UTC
There's already a freedesktop.org bug filed (it's linked from my initial comment). The i915 driver devs suggested I file an issue over here due to the reported ACPI errors in dmesg and the fact that "acpi_backlight=vendor" is needed to get sound working on the HP Spectre x360.

So I agree these things *shouldn't* be linked, but there's also some evidence to suggest that the HP hardware may be doing something odd.
Comment 5 Nick Coghlan 2017-09-26 02:00:03 UTC
Checking "lsmod | grep acpi" suggests that the vendor ACPI driver being loaded is sdhci_acpi:

$ lsmod | grep 'acpi '
snd_soc_sst_acpi       16384  0
sdhci_acpi             16384  0

The ACPI error messages always happen on start-up, independently of whether the internal monitor later starts flickering & freezing, supporting the theory that they're not directly related to the display problems.

However, might they still indicate a driver bug in their own right? Or are they a case of the driver complaining about hardware misbehaviour when reading the ACPI tables?

(Potentially related note: the laptop is currently running its original BIOS, as HP don't make the BIOS updates available in a Linux friendly form, and nothing in the release history at https://support.hp.com/au-en/drivers/selfservice/swdetails/hp-spectre-13-4000-x360-convertible-pc/7527520/model/7747999/swItemId/ob-187586-1 indicates any changes to the ACPI settings)
Comment 6 Hans de Goede 2019-11-27 13:38:24 UTC
I know this bug is closed now, but I've recently hit this seem issue, this is caused by the hp-wmi driver passing a buffer which is not big enough when making WMI related ACPI calls. I've submitted a patch-series which fixes this upstream:

https://lore.kernel.org/patchwork/project/lkml/list/?series=419906
Comment 7 Hans de Goede 2019-12-03 22:26:52 UTC
The fixes for this have landed upstream, updating resolution.

Note You need to log in before you can comment on or make changes to this bug.